fixed image captions on Mobile Portrait

--- a/css/experience.css
+++ b/css/experience.css
@@ -59,6 +59,11 @@
     margin-top: 3ex;
   }
 
+  .experiencePeriod
+  {
+    font-size: 1.5ex;
+  }
+
   .companyLogo
   {
     height: 3ex;
