--- a/css/projects.css
+++ b/css/projects.css
@@ -95,4 +95,9 @@
     margin-top: 10%;
   }
 
+  .project .showcaseRight
+  {
+    font-size: 3.5ex;
+  }
+
 }
